--- a/domain.yml
+++ b/domain.yml
@@ -31,6 +31,11 @@ slots:
     influence_conversation: false
     mappings:
     - type: custom
+  last_org_time:
+    type: text
+    influence_conversation: false
+    mappings:
+    - type: custom
 
   report_type:
     type: text
